<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bzhk.martian.presentation.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:src="@drawable/mars_wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Widget.Material3.CircularProgressIndicator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/greeting"
        style="@style/Text.Martian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:elevation="21dp"
        android:gravity="center"
        android:text="@string/welcome_text_greeting"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome_text_tv"
        style="@style/Text.Martian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:elevation="21dp"
        android:gravity="center"
        android:text="@string/welcome_text_quote"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/materialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/greeting" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/MartianButton"
        android:text="@string/welcome_text_btn"
        android:textColor="@color/white"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>