<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.MenuFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:src="@drawable/mars_wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Widget.Material3.CircularProgressIndicator" />

    <TextView
        android:id="@+id/menu_top_text"
        style="@style/Text.Martian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:elevation="21dp"
        android:text="@string/select_unit"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/layout_menu_item_curiosity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="21dp"
        app:layout_constraintEnd_toStartOf="@id/layout_menu_item_spirit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_top_text">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/menu_item_curiosity"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:alpha="0.9"
            android:background="#EAEAEA"
            android:clickable="true"
            android:padding="8dp"
            android:src="@drawable/curiosity_3d"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="32dp"
            android:text="@string/rover_name_curiosity"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_info_curiosity"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:alpha="0.8"
            android:padding="16dp"
            android:src="@drawable/info_icon" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_menu_item_spirit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout_menu_item_curiosity"
        app:layout_constraintTop_toBottomOf="@id/menu_top_text">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/menu_item_spirit"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:alpha="0.9"
            android:background="#EAEAEA"
            android:padding="8dp"
            android:src="@drawable/spirit_3d"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="32dp"
            android:text="@string/rover_name_spirit"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_info_spirit"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:alpha="0.8"
            android:padding="16dp"
            android:src="@drawable/info_icon" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_menu_item_opportunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="21dp"
        app:layout_constraintEnd_toStartOf="@id/layout_menu_item_dummy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_menu_item_curiosity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/menu_item_opportunity"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:alpha="0.9"
            android:background="#EAEAEA"
            android:padding="8dp"
            android:src="@drawable/spirit_3d"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="32dp"
            android:text="@string/rover_name_opportunity"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_info_Opportunity"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:alpha="0.8"
            android:padding="16dp"
            android:src="@drawable/info_icon" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_menu_item_dummy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout_menu_item_opportunity"
        app:layout_constraintTop_toBottomOf="@id/layout_menu_item_spirit">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:padding="8dp"
            android:visibility="invisible" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:alpha="0.6"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>